--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
-  "name": "burgers-order-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.2",
-    "express": "^4.18.1",
-    "morgan": "^1.10.0",
-    "pg": "^8.8.0",
-    "sequelize": "^6.21.4"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.19"
-  }
+    "name": "burgers-order-api",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "node src/index.js",
+        "dev": "nodemon src/index.js",
+        "format": "prettier --write \"src/**/*.js\""
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.2",
+        "express": "^4.18.1",
+        "morgan": "^1.10.0",
+        "pg": "^8.8.0",
+        "sequelize": "^6.21.4"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.19",
+        "prettier": "^2.7.1"
+    }
 }
